# remote-wiring

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.mit  README.md  SUMMARY.md
include/: Boards.h  CMakeLists.txt  FirmataDevice.h  FirmataI2c.h  RemoteDevice.h  RwBoards.h  RwConstants.h  RwTypes.h  RwUtility.h  SemanticVersion.h  Telemorph.h  Wire.h  Wiring.h  WiringPin.h  remote_wiring
samples/: CMakeLists.txt  RwArduino.h  i2c_sample.cpp  readme_sample.cpp  wii_nunchuck.cpp
samples/basics/: AnalogReadSerial.cpp  BareMinimum.cpp  Blink.cpp  CMakeLists.txt  DigitalReadSerial.cpp  Fade.cpp  Interrupt.cpp
src/: CMakeLists.txt  FirmataDevice.cpp  FirmataI2c.cpp
tests/: Catch.RwUtility.cpp  Catch.Telemorph.cpp  Catch.Wire.cpp  Catch.Wiring.cpp
